fake datas added with bogus

--- a/src/Api/WebApi/Sozluk.Api.WebApi/appsettings.Development.json
+++ b/src/Api/WebApi/Sozluk.Api.WebApi/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "SozlukDbConnectionString": "Server=SAMETSPC;Database=SozlukDbo;Trusted_Connection=true;Encrypt=False"
 }
