--- a/src/Api/Core/Sozluk.Api.Application/Sozluk.Api.Application.csproj
+++ b/src/Api/Core/Sozluk.Api.Application/Sozluk.Api.Application.csproj
@@ -13,6 +13,7 @@
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
 		<PackageReference Include="MediatR" Version="11.1.0" />
 		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
 		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
@@ -20,10 +21,6 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Sozluk.Api.Domain\Sozluk.Api.Domain.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Folder Include="Features\Queries\" />
 	</ItemGroup>
 
 </Project>
