updated multp thins

--- a/src/Api/Core/Sozluk.Api.Application/Sozluk.Api.Application.csproj
+++ b/src/Api/Core/Sozluk.Api.Application/Sozluk.Api.Application.csproj
@@ -23,4 +23,11 @@
 		<ProjectReference Include="..\Sozluk.Api.Domain\Sozluk.Api.Domain.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Features\Queries\GetEntryDetail\" />
+	  <Folder Include="Features\Queries\GetUserDetail\" />
+	  <Folder Include="Features\Queries\GetUserEntries\" />
+	  <Folder Include="Features\Queries\SearchBySubject\" />
+	</ItemGroup>
+
 </Project>
