--- a/src/Common/Sozluk.Common/Sozluk.Common.csproj
+++ b/src/Common/Sozluk.Common/Sozluk.Common.csproj
@@ -10,6 +10,8 @@
 		<PackageReference Include="MediatR" Version="11.1.0" />
 		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
 		<PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
+
 	</ItemGroup>
 
 </Project>
